added bib tagging article

--- a/src/how-photo-bib-tagging-works.html
+++ b/src/how-photo-bib-tagging-works.html
@@ -329,87 +329,162 @@
 
     <!-- Main Wrapper-->
     <main class="wrapper">
-      <section>
-        <!-- RD Information Downloads -->
-        <!-- ================================= -->
+      <!-- Content -->
+      <section class="wptb-element">
         <div class="container">
-          <div class="wptb-heading">
-            <div class="wptb-item--inner">
-              <h2 class="mb-5">Resources for Race Directors</h2>
-              <div class="wptb-list1">
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="race-day-photo-tips.html"
-                      >Race Photo Best Practices and Tips</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="race-day-photo-checklist.html"
-                      >Race Day Photography Checklist</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="how-photo-bib-tagging-works.html"
-                      >Bib-Tagging & Photo Search Explainer (for
-                      Participants)</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Custom Quote Request Form (fillable PDF)</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Post-Race Media Toolkit</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#"
-                      >Content Calendar Template for Post-Race Promotions</a
-                    >
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Post-Race Reporting Template</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Sample Media Release Waiver Language</a>
-                  </div>
-                </div>
+          <article>
+            <h1>How Bib Tagging Works: Finding Your Race Photos Made Easy</h1>
+            <p>
+              If you've ever finished a race and wondered how photographers
+              manage to capture thousands of photos and still make it easy for
+              runners to find themselves later, you're not alone. The process
+              might seem like magic, but there's a smart system behind it—and it
+              starts with your bib number.
+            </p>
+            <p>
+              This article explains how bib-tagged photo delivery works, why
+              it's effective, and what you as a runner can do to make sure you
+              get the best possible race-day photos.
+            </p>
 
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Event Photo Branding Kit</a>
-                  </div>
-                </div>
-                <div class="wptb--item wow skewIn" data-wow-delay="700ms">
-                  <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
-                  <div class="wptb-item--text">
-                    <a href="#">Yearly Photo Coverage Planning Worksheet</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+            <h2>What Is Bib Tagging?</h2>
+            <p>
+              Bib tagging is the process of identifying runners in race-day
+              photos based on the number displayed on their race bib. Thanks to
+              recent advances in AI and computer vision, this can now be done
+              automatically and accurately across thousands of photos. The
+              result? You can search for your bib number and instantly view a
+              personalized gallery of images featuring you.
+            </p>
+            <p>
+              This technology eliminates the need to scroll through hundreds of
+              photos to find your face. It dramatically improves both the
+              participant experience and the efficiency of post-race photo
+              delivery.
+            </p>
+
+            <h2>How the Process Works</h2>
+            <h3>1. Photos Are Captured at Key Locations</h3>
+            <p>
+              Throughout the event, a professional photographer will be
+              stationed at critical points on the course—the start, finish line,
+              and high-impact moments like climbs, turns, or community hotspots.
+              Each image is captured with high-resolution detail to ensure your
+              bib number is visible and readable.
+            </p>
+
+            <h3>2. AI Detects and Tags Bib Numbers</h3>
+            <p>
+              After the race, the photos are uploaded to a secure gallery
+              system. Behind the scenes, AI-driven software scans each photo for
+              visible bib numbers. These tools use shape and text recognition to
+              isolate numbers from race bibs, even when they are partially
+              obscured or in motion.
+            </p>
+            <p>
+              Each detected number is matched to the corresponding photo. If
+              your bib number appears in a photo, that image is tagged to you.
+            </p>
+
+            <h3>3. You Search Using Your Bib</h3>
+            <p>
+              Once tagging is complete, the full photo gallery becomes
+              searchable. You simply enter your bib number into the search
+              field, and the system pulls up all photos where your number
+              appears. It's quick, easy, and personalized.
+            </p>
+
+            <h3>4. You Download or Order Prints</h3>
+            <p>
+              Depending on the event, you can download digital images, purchase
+              prints, or even share directly to social media. Because the photos
+              are already filtered to show only images you're in, there's no
+              wasted time or frustration.
+            </p>
+
+            <h2>Tips for Being Findable</h2>
+            <ul>
+              <li>
+                Wear your bib on the front of your body, ideally on your chest
+                or stomach. Bibs on the back or under clothing are hard to
+                detect.
+              </li>
+              <li>
+                Don’t fold or crumple your bib. This makes numbers harder to
+                read.
+              </li>
+              <li>
+                Pin your bib flat with all four corners secured. This prevents
+                flapping or twisting that could hide your number.
+              </li>
+              <li>
+                Avoid wearing hydration belts or jackets that cover your bib.
+              </li>
+              <li>
+                Smile when you see the photographer! Not only will you look
+                great, but it also helps them capture the clearest image of your
+                bib.
+              </li>
+            </ul>
+
+            <h2>What If My Bib Wasn’t Detected?</h2>
+            <p>
+              Sometimes your number might not appear in any photos due to angle,
+              obstruction, or environmental factors. If this happens, most
+              galleries allow you to browse all photos or search by time and
+              location to spot yourself manually.
+            </p>
+            <p>
+              You can also contact the photographer with a description of your
+              outfit, time of finish, and any landmarks that might help them
+              locate you in the gallery.
+            </p>
+
+            <h2>Why Bib Tagging Benefits Everyone</h2>
+            <p>
+              Bib-tagged photography isn’t just convenient for participants—it
+              also helps race organizers and sponsors:
+            </p>
+            <ul>
+              <li>
+                Race Directors get cleaner, more organized galleries that
+                reflect well on the event.
+              </li>
+              <li>
+                Sponsors gain better visibility when their logos appear on
+                branded overlays in tagged images.
+              </li>
+              <li>
+                Photographers save time on sorting and tagging, meaning faster
+                delivery and lower costs.
+              </li>
+            </ul>
+            <p>
+              Most importantly, you get a better experience. Within hours or
+              days of your race, you can relive the finish line feeling, see
+              yourself in action, and share your accomplishments with family and
+              friends.
+            </p>
+
+            <h2>Final Thoughts</h2>
+            <p>
+              The next time you're sprinting to the finish line or high-fiving a
+              volunteer mid-course, rest assured that your moment is being
+              captured—and tagged—thanks to smart photo processing.
+            </p>
+            <p>
+              Bib tagging turns thousands of images into a personalized race-day
+              story, one bib number at a time. All you have to do is show up,
+              smile, and wear your bib right.
+            </p>
+            <p>
+              If you're looking for your race photos now, just visit the gallery
+              link provided by your event and enter your bib number to begin.
+            </p>
+            <a href="https://gallery.oklahomaracephotos.com/"
+              >View All Galleries</a
+            >
+          </article>
         </div>
       </section>
     </main>
@@ -516,16 +591,15 @@
         </div>
       </div>
     </footer>
-
     <div class="totop">
       <a href="#"><i class="bi bi-chevron-up"></i></a>
     </div>
 
     <!-- Core JS -->
-    <script src="./assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- Framework -->
-    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 
     <!-- WOW Scroll Effect -->
     <script src="../plugins/wow/wow.min.js"></script>
@@ -551,10 +625,6 @@
     <script src="../plugins/cursor-effect/cursor-effect.js"></script>
 
     <!-- Theme Custom JS -->
-    <script src="./assets/js/theme.js"></script>
-
-    <!-- Google Map Calling -->
-    <script src="./assets/js/map.js"></script>
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCUiaBC-cJ0wcEtqCUtoXF3I91o9wS42gQ"></script>
+    <script src="../assets/js/theme.js"></script>
   </body>
 </html>
