added contact us form

--- a/src/contact.html
+++ b/src/contact.html
@@ -375,66 +375,15 @@
               </div>
 
               <div class="col-lg-7">
-                <!-- <form class="wptb-form" action="contact.php" method="post">
-                  <div class="wptb-form--inner">
-                    <div class="row">
-                      <div class="col-lg-6 col-md-6 mb-4">
-                        <div class="form-group">
-                          <input
-                            type="text"
-                            name="name"
-                            class="form-control"
-                            placeholder="Name*"
-                            required
-                          />
-                        </div>
-                      </div>
-
-                      <div class="col-lg-6 col-md-6 mb-4">
-                        <div class="form-group">
-                          <input
-                            type="email"
-                            name="email"
-                            class="form-control"
-                            placeholder="E-mail*"
-                            required
-                          />
-                        </div>
-                      </div>
-
-                      <div class="col-lg-12 col-md-12 mb-4">
-                        <div class="form-group">
-                          <input
-                            type="text"
-                            name="subject"
-                            class="form-control"
-                            placeholder="Subject"
-                          />
-                        </div>
-                      </div>
-
-                      <div class="col-md-12 col-lg-12 mb-4">
-                        <div class="form-group">
-                          <textarea
-                            name="message"
-                            class="form-control"
-                            placeholder="Text"
-                          ></textarea>
-                        </div>
-                      </div>
-
-                      <div class="col-md-12 col-lg-12">
-                        <div class="wptb-item--button">
-                          <button class="btn" type="submit">
-                            <span class="btn-wrap">
-                              <span class="text-first">Send Mail</span>
-                            </span>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </form> -->
+                <!-- Elfsight Form Builder |  Form Builder -->
+                <script
+                  src="https://static.elfsight.com/platform/platform.js"
+                  async
+                ></script>
+                <div
+                  class="elfsight-app-18c9126f-fd75-435f-a44a-3f17762f8893"
+                  data-elfsight-app-lazy
+                ></div>
               </div>
             </div>
           </div>
