added rrca logo to footer

--- a/src/how-photo-bib-tagging-works.html
+++ b/src/how-photo-bib-tagging-works.html
@@ -551,6 +551,15 @@
                       </li>
                     </ul>
                   </div>
+                  <div
+                    class="mt-2 justify-content-center"
+                    style="display: flex"
+                  >
+                    <img
+                      src="./assets/img/RRCA.2020.Member-Icon.png"
+                      style="max-width: 75px"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
