--- a/src/race-day-photo-checklist.html
+++ b/src/race-day-photo-checklist.html
@@ -429,7 +429,10 @@
               sponsor package
             </li>
           </ul>
-          <a class="btn gray" href="./assets/documents/Race Day Photography Checklist.pdf">
+          <a
+            class="btn gray"
+            href="./assets/documents/Race Day Photography Checklist.pdf"
+          >
             <span class="btn-wrap">
               <span class="text-first">Download Printable Version</span>
             </span>
@@ -499,6 +502,15 @@
                         <a href="/contact.html">Contact</a>
                       </li>
                     </ul>
+                  </div>
+                  <div
+                    class="mt-2 justify-content-center"
+                    style="display: flex"
+                  >
+                    <img
+                      src="./assets/img/RRCA.2020.Member-Icon.png"
+                      style="max-width: 75px"
+                    />
                   </div>
                 </div>
               </div>
