--- a/src/resources.html
+++ b/src/resources.html
@@ -335,7 +335,13 @@
         <div class="container">
           <div class="wptb-heading">
             <div class="wptb-item--inner">
-              <h2 class="mb-5">Resources for Race Directors</h2>
+              <h1 class="mb-5">Resources for Race Directors</h1>
+              <p>
+                Whether you're organizing your first 5K or managing a statewide
+                race series, these tools are built to help you streamline
+                race-day photography, engage your audience, and deliver value to
+                your sponsors.
+              </p>
               <div class="wptb-list1">
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
@@ -343,6 +349,12 @@
                     <a href="race-day-photo-tips.html"
                       >Race Photo Best Practices and Tips</a
                     >
+                    <p>
+                      A quick-start guide to getting the best race photos
+                      possible. Covers bib visibility, photographer positioning,
+                      signage placement, and what participants should know to be
+                      photo-ready.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
@@ -351,6 +363,12 @@
                     <a href="race-day-photo-checklist.html"
                       >Race Day Photography Checklist</a
                     >
+                    <p>
+                      A printable checklist to help you prepare your event for
+                      smooth photo coverage. Includes setup tips, volunteer
+                      reminders, and post-race wrap-up steps to make sure
+                      nothing is missed.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
@@ -360,51 +378,101 @@
                       >Bib-Tagging & Photo Search Explainer (for
                       Participants)</a
                     >
+                    <p>
+                      A participant-facing guide that explains how bib-tagged
+                      photo search works, how to get found, and what to do if
+                      their bib wasn’t detected. Perfect for including in race
+                      emails or info packets.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Custom Quote Request Form (fillable PDF)</a>
+                    <a href="#">Custom Quote Request Form</a>
+                    <p>
+                      Make getting a quote simple and professional. This
+                      fillable PDF lets you provide event details, timeline,
+                      expected attendance, and sponsor involvement to receive a
+                      tailored pricing package.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Post-Race Media Toolkit</a>
+                    <a href="#"> Post-Race Media Toolkit (Coming Soon)</a>
+                    <p>
+                      A ready-to-use bundle of race recap templates, sponsor
+                      callouts, and sample social posts. Helps you share
+                      highlights, thank participants, and keep the momentum
+                      going after race day.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
                     <a href="#"
-                      >Content Calendar Template for Post-Race Promotions</a
+                      >Content Calendar Template for Post-Race Promotions
+                      (Coming Soon)</a
                     >
+                    <p>
+                      A 2–4 week post-race content plan that tells you what to
+                      post, when to post it, and what to say. Keeps your brand
+                      active and gives sponsors continued visibility after the
+                      event.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Post-Race Reporting Template</a>
+                    <a href="#">Post-Race Reporting Template (Coming Soon)</a>
+                    <p>
+                      Show your sponsors their ROI with a clean, easy-to-edit
+                      template that includes download stats, branded image
+                      exposure, and participant engagement metrics.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Sample Media Release Waiver Language</a>
+                    <a href="#"
+                      >Sample Media Release Waiver Language (Coming Soon)</a
+                    >
+                    <p>
+                      Language you can include in your registration waiver to
+                      ensure you have the right to photograph participants and
+                      use images for event marketing and promotion.
+                    </p>
                   </div>
                 </div>
 
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Event Photo Branding Kit</a>
+                    <a href="#">Event Photo Branding Kit (Coming Soon)</a>
+                    <p>
+                      Specifications and submission guidelines for sponsor
+                      overlays, including file types, dimensions, safe zones,
+                      and examples of how overlays appear in finished images.
+                    </p>
                   </div>
                 </div>
                 <div class="wptb--item wow skewIn" data-wow-delay="700ms">
                   <div class="wptb-item--icon"><i class="bi bi-check"></i></div>
                   <div class="wptb-item--text">
-                    <a href="#">Yearly Photo Coverage Planning Worksheet</a>
+                    <a href="#"
+                      >Yearly Photo Coverage Planning Worksheet (Coming Soon)</a
+                    >
+                    <p>
+                      A worksheet for planning out photo needs across a full
+                      race season or series. Helps you align with sponsor
+                      deliverables, keep marketing materials fresh, and ensure
+                      consistent photo coverage across all events.
+                    </p>
                   </div>
                 </div>
               </div>
@@ -476,6 +544,12 @@
                       </li>
                     </ul>
                   </div>
+                </div>
+                <div class="mt-2 justify-content-center" style="display: flex">
+                  <img
+                    src="./assets/img/RRCA.2020.Member-Icon.png"
+                    style="max-width: 75px"
+                  />
                 </div>
               </div>
             </div>
