--- a/src/services.html
+++ b/src/services.html
@@ -351,10 +351,15 @@
                       relive race day, I capture high-quality, bib-tagged photos
                       with fast turnaround and simple delivery.
                     </p>
-                    <a class="btn gray" href="./assets/documents/ORP One Pager.pdf">
-                        <span class="btn-wrap">
-                            <span class="text-first">Download Printable Version</span>
-                        </span>
+                    <a
+                      class="btn gray"
+                      href="./assets/documents/ORP One Pager.pdf"
+                    >
+                      <span class="btn-wrap">
+                        <span class="text-first"
+                          >Download Printable Version</span
+                        >
+                      </span>
                     </a>
                   </div>
                 </div>
@@ -1077,6 +1082,15 @@
                         <a href="/contact.html">Contact Us</a>
                       </li>
                     </ul>
+                  </div>
+                  <div
+                    class="mt-2 justify-content-center"
+                    style="display: flex"
+                  >
+                    <img
+                      src="./assets/img/RRCA.2020.Member-Icon.png"
+                      style="max-width: 75px"
+                    />
                   </div>
                 </div>
               </div>
