--- a/src/index.html
+++ b/src/index.html
@@ -1250,6 +1250,15 @@
                       </li>
                     </ul>
                   </div>
+                  <div
+                    class="mt-2 justify-content-center"
+                    style="display: flex"
+                  >
+                    <img
+                      src="./assets/img/RRCA.2020.Member-Icon.png"
+                      style="max-width: 75px"
+                    />
+                  </div>
                 </div>
               </div>
             </div>
@@ -1335,4 +1344,3 @@
     <script src="./assets/js/theme.js"></script>
   </body>
 </html>
-
