added social share and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
@@ -13,28 +13,15 @@
       content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
     />
     <meta name="author" content="Michelle Tabor" />
+    <meta property="og:image" content="./assets/img/previewimage.jpg" />
+    <meta property="og:image:width" content="940" />
+    <meta property="og:image:height" content="788" />
 
     <!-- Favicon and touch Icons -->
     <link
-      href="./assets/img/favicon.png"
+      href="./assets/img/favicon.ico"
       rel="shortcut icon"
       type="image/png"
-    />
-    <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link
-      href="./assets/img/apple-touch-icon-72x72.png"
-      rel="apple-touch-icon"
-      sizes="72x72"
-    />
-    <link
-      href="./assets/img/apple-touch-icon-114x114.png"
-      rel="apple-touch-icon"
-      sizes="114x114"
-    />
-    <link
-      href="./assets/img/apple-touch-icon-144x144.png"
-      rel="apple-touch-icon"
-      sizes="144x144"
     />
 
     <!-- Page Title -->
