added rdhq logo

--- a/src/race-day-photo-checklist.html
+++ b/src/race-day-photo-checklist.html
@@ -491,13 +491,21 @@
                     </ul>
                   </div>
                   <div
-                    class="mt-2 justify-content-center"
-                    style="display: flex"
+                    class="mt-2"
+                    style="display: flex; justify-content: space-evenly;align-items: flex-end;"
                   >
                     <img
                       src="./assets/img/RRCA.2020.Member-Icon.png"
                       style="max-width: 75px"
                     />
+                    <a
+                      href="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/"
+                      target="_blank"
+                    >
+                      <img
+                        src="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/badges/light/stacked/"
+                        style="max-width:133px; max-height:110px;"
+                    /></a>
                   </div>
                 </div>
               </div>
