--- a/src/404.html
+++ b/src/404.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
     />
-    <meta name="description" content="Oklahoma Race Photos" />
+    <meta name="description" content="Dust and Run Photos" />
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -22,7 +22,7 @@
     />
 
     <!-- Page Title -->
-    <title>Kimono - Photography Agency</title>
+    <title>Dust and Run Photos</title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -81,7 +81,7 @@
                     <a href="/">Home</a>
                   </li>
                   <li class="menu-item">
-                    <a href="https://gallery.oklahomaracephotos.com"
+                    <a href="https://gallery.dustandrunphotos.com"
                       >Find Your Photos</a
                     >
                   </li>
@@ -138,8 +138,8 @@
           <div class="wptb-item--icon"><i class="bi bi-envelope"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="mailto:info@oklahomaracephotos.com"
-                >info@oklahomaracephotos.com</a
+              <a href="mailto:info@dustandrunphotos.com"
+                >info@dustandrunphotos.com</a
               >
             </p>
           </div>
@@ -151,7 +151,7 @@
           <div class="wptb-item--icon"><i class="bi bi-geo-alt"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="contact-1.html">Oklahoma City, OKlahoma</a>
+              <a href="contact.html">Oklahoma City, OKlahoma</a>
             </p>
           </div>
         </div>
@@ -178,7 +178,7 @@
             ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/oklahomaracephotos"
+            <a href="https://www.instagram.com/dustandrunphotos"
               ><i class="bi bi-instagram"></i
             ></a>
           </li>
@@ -206,7 +206,7 @@
       <div class="aside_info_inner">
         <h6>// Instagram</h6>
         <div class="insta-logo">
-          <i class="bi bi-instagram"></i> oklahomaracephotos
+          <i class="bi bi-instagram"></i> dustandrunphotos
         </div>
         <div class="wptb-instagram--gallery">
           <div
@@ -255,8 +255,8 @@
             <div class="wptb-item--icon"><i class="bi bi-envelope"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="mailto:info@oklahomaracephotos.com"
-                  >info@oklahomaracephotos.com</a
+                <a href="mailto:info@dustandrunphotos.com"
+                  >info@dustandrunphotos.com</a
                 >
               </p>
             </div>
@@ -295,7 +295,7 @@
               ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/oklahomaracephotos"
+              <a href="https://www.instagram.com/dustandrunphotos"
                 ><i class="bi bi-instagram"></i
               ></a>
             </li>
