--- a/src/services.html
+++ b/src/services.html
@@ -25,7 +25,7 @@
     />
 
     <!-- Page Title -->
-    <title>Oklahoma Race Photos | Event & Finish Line Photography OKC</title>
+    <title>Dust and Run Photos | Event & Finish Line Photography OKC</title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -84,7 +84,7 @@
                     <a href="/">Home</a>
                   </li>
                   <li class="menu-item">
-                    <a href="https://gallery.oklahomaracephotos.com"
+                    <a href="https://gallery.dustandrunphotos.com"
                       >Find Your Photos</a
                     >
                   </li>
@@ -143,8 +143,8 @@
           <div class="wptb-item--icon"><i class="bi bi-envelope"></i></div>
           <div class="wptb-item--holder">
             <p class="wptb-item--description">
-              <a href="mailto:info@oklahomaracephotos.com"
-                >info@oklahomaracephotos.com</a
+              <a href="mailto:info@dustandrunphotos.com"
+                >info@dustandrunphotos.com</a
               >
             </p>
           </div>
@@ -178,12 +178,12 @@
         <ul>
           <li>
             <a
-              href="https://www.facebook.com/people/Oklahoma-Race-Photos/61576551356811/"
+              href="https://www.facebook.com/dustandrunphotos"
               ><i class="bi bi-facebook"></i
             ></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/oklahomaracephotos"
+            <a href="https://www.instagram.com/dustandrunphotos"
               ><i class="bi bi-instagram"></i
             ></a>
           </li>
@@ -211,7 +211,7 @@
       <div class="aside_info_inner">
         <h6>// Instagram</h6>
         <div class="insta-logo">
-          <i class="bi bi-instagram"></i> oklahomaracephotos
+          <i class="bi bi-instagram"></i> dustandrunphotos
         </div>
         <div class="wptb-instagram--gallery">
           <div
@@ -260,8 +260,8 @@
             <div class="wptb-item--icon"><i class="bi bi-envelope"></i></div>
             <div class="wptb-item--holder">
               <p class="wptb-item--description">
-                <a href="mailto:info@oklahomaracephotos.com"
-                  >info@oklahomaracephotos.com</a
+                <a href="mailto:info@dustandrunphotos.com"
+                  >info@dustandrunphotos.com</a
                 >
               </p>
             </div>
@@ -300,7 +300,7 @@
               ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/oklahomaracephotos"
+              <a href="https://www.instagram.com/dustandrunphotos"
                 ><i class="bi bi-instagram"></i
               ></a>
             </li>
@@ -425,7 +425,7 @@
           <div class="wptb-heading col-lg-6">
             <div class="wptb-item--inner">
               <h2 class="wptb-item--title mb-0">
-                Why Work With Oklahoma Race Photos?
+                Why Work With Dust and Run Photos?
               </h2>
               <p class="fs-18">
                 I’m not a studio photographer moonlighting at races- I
@@ -1025,7 +1025,7 @@
                         <a href="/event-calendar.html">Event Calendar</a>
                       </li>
                       <li class="menu-item">
-                        <a href="https://gallery.oklahomaracephotos.com"
+                        <a href="https://gallery.dustandrunphotos.com"
                           >Gallery</a
                         >
                       </li>
@@ -1103,19 +1103,19 @@
         <div class="container">
           <div class="footer-bottom-inner">
             <div class="copyright">
-              <p>Oklahoma Race Photos, All Rights Reserved</p>
+              <p>Dust and Run Photos, All Rights Reserved</p>
             </div>
             <div class="social-box style-oval">
               <ul>
                 <li>
                   <a
-                    href="https://www.facebook.com/profile.php?id=61576551356811"
+                    href="https://www.facebook.com/dustandrunphotos"
                     class="bi bi-facebook"
                   ></a>
                 </li>
                 <li>
                   <a
-                    href="https://www.instagram.com/oklahomaracephotos"
+                    href="https://www.instagram.com/dustandrunphotos"
                     class="bi bi-instagram"
                   ></a>
                 </li>
