update meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,13 @@
     />
     <meta
       name="description"
-      content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
+      content="Dust & Run Photos provides professional race photography in Oklahoma. Bib-tagged galleries, fast turnaround, and sponsor-ready images."
     />
+    <meta
+      name="keywords"
+      content="Oklahoma race photography, event photos, 5K photographer, bib tagging, finish line photos, race photo delivery"
+    />
+
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -1237,9 +1242,13 @@
                       </li>
                     </ul>
                   </div>
-                 <div
+                  <div
                     class="mt-2"
-                    style="display: flex; justify-content: space-evenly;align-items: flex-end;"
+                    style="
+                      display: flex;
+                      justify-content: space-evenly;
+                      align-items: flex-end;
+                    "
                   >
                     <img
                       src="./assets/img/RRCA.2020.Member-Icon.png"
@@ -1251,7 +1260,7 @@
                     >
                       <img
                         src="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/badges/light/stacked/"
-                        style="max-width:133px; max-height:110px;"
+                        style="max-width: 133px; max-height: 110px"
                     /></a>
                   </div>
                 </div>
