--- a/src/contact.html
+++ b/src/contact.html
@@ -10,8 +10,13 @@
     />
     <meta
       name="description"
-      content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
+      content="Get in touch with Dust & Run Photos to book race photography, request a quote, or ask about coverage options."
     />
+    <meta
+      name="keywords"
+      content="contact race photographer, Oklahoma race photos, race photo booking, event photographer inquiry"
+    />
+
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -25,7 +30,9 @@
     />
 
     <!-- Page Title -->
-    <title>Dust and Run Photos | Event & Finish Line Photography OKC</title>
+    <title>
+      Dust and Run Photos | Event & Finish Line Photography OKC | Contact Me
+    </title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -177,8 +184,7 @@
       <div class="social-box">
         <ul>
           <li>
-            <a
-              href="https://www.facebook.com/dustandrunphotos"
+            <a href="https://www.facebook.com/dustandrunphotos"
               ><i class="bi bi-facebook"></i
             ></a>
           </li>
@@ -294,8 +300,7 @@
         <div class="social-box style-square">
           <ul>
             <li>
-              <a
-                href="https://www.facebook.com/dustandrunphotos/"
+              <a href="https://www.facebook.com/dustandrunphotos/"
                 ><i class="bi bi-facebook"></i
               ></a>
             </li>
@@ -442,7 +447,11 @@
                   </div>
                   <div
                     class="mt-2"
-                    style="display: flex; justify-content: space-evenly;align-items: flex-end;"
+                    style="
+                      display: flex;
+                      justify-content: space-evenly;
+                      align-items: flex-end;
+                    "
                   >
                     <img
                       src="./assets/img/RRCA.2020.Member-Icon.png"
@@ -454,7 +463,7 @@
                     >
                       <img
                         src="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/badges/light/stacked/"
-                        style="max-width:133px; max-height:110px;"
+                        style="max-width: 133px; max-height: 110px"
                     /></a>
                   </div>
                 </div>
