--- a/src/event-calendar.html
+++ b/src/event-calendar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
@@ -10,8 +10,13 @@
     />
     <meta
       name="description"
-      content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
+      content="See upcoming races covered by Dust & Run Photos across Oklahoma. View event dates, locations, and gallery release info."
     />
+    <meta
+      name="keywords"
+      content="Oklahoma race calendar, upcoming races, event photographer schedule, 5K events, race photos"
+    />
+
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -25,7 +30,9 @@
     />
 
     <!-- Page Title -->
-    <title>Dust and Run Photos | Event & Finish Line Photography OKC</title>
+    <title>
+      Dust and Run Photos | Event & Finish Line Photography OKC | Event Calendar
+    </title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -294,8 +301,7 @@
         <div class="social-box style-square">
           <ul>
             <li>
-              <a
-                href="https://www.facebook.com/dustandrunphotos"
+              <a href="https://www.facebook.com/dustandrunphotos"
                 ><i class="bi bi-facebook"></i
               ></a>
             </li>
@@ -322,8 +328,8 @@
         <div class="container">
           <div class="wptb-heading">
             <div class="wptb-item--inner">
-              <h2 class="mb-5">Event Calendar</h2>
-              <!-- Elfsight Event Calendar | Untitled Event Calendar -->
+              <h1 class="mb-5">Event Calendar</h1>
+              <!-- Elfsight Event Calendar  -->
               <script
                 src="https://static.elfsight.com/platform/platform.js"
                 async
