--- a/src/how-photo-bib-tagging-works.html
+++ b/src/how-photo-bib-tagging-works.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
@@ -10,8 +10,13 @@
     />
     <meta
       name="description"
-      content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
+      content="Learn how bib-tagged photo galleries work and how participants can easily find their race photos using smart search."
     />
+    <meta
+      name="keywords"
+      content="bib tagging explained, how to find race photos, bib number photo search, tagged gallery system"
+    />
+
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -25,7 +30,10 @@
     />
 
     <!-- Page Title -->
-    <title>Dust and Run Photos | Event & Finish Line Photography OKC</title>
+    <title>
+      Dust and Run Photos | Event & Finish Line Photography OKC | How Photo Bib
+      Tagging Works
+    </title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -177,8 +185,7 @@
       <div class="social-box">
         <ul>
           <li>
-            <a
-              href="https://www.facebook.com/dustandrunphotos"
+            <a href="https://www.facebook.com/dustandrunphotos"
               ><i class="bi bi-facebook"></i
             ></a>
           </li>
@@ -540,7 +547,11 @@
                   </div>
                   <div
                     class="mt-2"
-                    style="display: flex; justify-content: space-evenly;align-items: flex-end;"
+                    style="
+                      display: flex;
+                      justify-content: space-evenly;
+                      align-items: flex-end;
+                    "
                   >
                     <img
                       src="./assets/img/RRCA.2020.Member-Icon.png"
@@ -552,7 +563,7 @@
                     >
                       <img
                         src="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/badges/light/stacked/"
-                        style="max-width:133px; max-height:110px;"
+                        style="max-width: 133px; max-height: 110px"
                     /></a>
                   </div>
                 </div>
