--- a/src/race-day-photo-checklist.html
+++ b/src/race-day-photo-checklist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
@@ -10,8 +10,13 @@
     />
     <meta
       name="description"
-      content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
+      content="Use this race-day photography checklist to prepare your venue, volunteers, and signage for clean, professional race coverage."
     />
+    <meta
+      name="keywords"
+      content="race photo checklist, photography prep, race day setup, finish line photo tips, event photo guide"
+    />
+
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -25,7 +30,10 @@
     />
 
     <!-- Page Title -->
-    <title>Dust and Run Photos | Event & Finish Line Photography OKC</title>
+    <title>
+      Dust and Run Photos | Event & Finish Line Photography OKC | Race Day Photo
+      Checklist
+    </title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -492,7 +500,11 @@
                   </div>
                   <div
                     class="mt-2"
-                    style="display: flex; justify-content: space-evenly;align-items: flex-end;"
+                    style="
+                      display: flex;
+                      justify-content: space-evenly;
+                      align-items: flex-end;
+                    "
                   >
                     <img
                       src="./assets/img/RRCA.2020.Member-Icon.png"
@@ -504,7 +516,7 @@
                     >
                       <img
                         src="https://www.racedirectorshq.com/listings/a79cb7a4-c6c1-400b-8b09-032cb715d997/badges/light/stacked/"
-                        style="max-width:133px; max-height:110px;"
+                        style="max-width: 133px; max-height: 110px"
                     /></a>
                   </div>
                 </div>
