--- a/src/resources.html
+++ b/src/resources.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
@@ -10,8 +10,13 @@
     />
     <meta
       name="description"
-      content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
+      content="Download free race-day photography resources, checklists, and guides to help your event run smoother and increase photo ROI."
     />
+    <meta
+      name="keywords"
+      content="race photography resources, photo checklist, race director tools, event photo planning, branded overlays"
+    />
+
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -25,7 +30,10 @@
     />
 
     <!-- Page Title -->
-    <title>Dust and Run Photos | Event & Finish Line Photography OKC</title>
+    <title>
+      Dust and Run Photos | Event & Finish Line Photography OKC | Race Director
+      Resources
+    </title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -177,8 +185,7 @@
       <div class="social-box">
         <ul>
           <li>
-            <a
-              href="https://www.facebook.com/dustandrunphotos"
+            <a href="https://www.facebook.com/dustandrunphotos"
               ><i class="bi bi-facebook"></i
             ></a>
           </li>
@@ -294,8 +301,7 @@
         <div class="social-box style-square">
           <ul>
             <li>
-              <a
-                href="https://www.facebook.com/dustandrunphotos"
+              <a href="https://www.facebook.com/dustandrunphotos"
                 ><i class="bi bi-facebook"></i
               ></a>
             </li>
