--- a/src/services.html
+++ b/src/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <!-- Meta Tags -->
     <meta charset="utf-8" />
@@ -10,8 +10,13 @@
     />
     <meta
       name="description"
-      content="Race-day photography across Oklahoma—bib-tagged photos, fast delivery, and local expertise. View galleries or hire us for your next event."
+      content="Explore Dust & Run Photos' race photography packages. Flat-rate coverage, participant-paid options, and sponsor-branded images."
     />
+    <meta
+      name="keywords"
+      content="race photography services, flat rate photo package, Oklahoma event photos, branded photo overlays, finish line photos"
+    />
+
     <meta name="author" content="Michelle Tabor" />
     <meta property="og:image" content="./assets/img/previewimage.jpg" />
     <meta property="og:image:width" content="940" />
@@ -25,7 +30,9 @@
     />
 
     <!-- Page Title -->
-    <title>Dust and Run Photos | Event & Finish Line Photography OKC</title>
+    <title>
+      Dust and Run Photos | Event & Finish Line Photography OKC | Event Services
+    </title>
 
     <!-- Styles Include -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -177,8 +184,7 @@
       <div class="social-box">
         <ul>
           <li>
-            <a
-              href="https://www.facebook.com/dustandrunphotos"
+            <a href="https://www.facebook.com/dustandrunphotos"
               ><i class="bi bi-facebook"></i
             ></a>
           </li>
